--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="assets/css/APlayer.min.css" rel="stylesheet" type="text/css">
     <link href="assets/css/highlight.github.min.css" rel="stylesheet" type="text/css">
     <link href="assets/css/custom.css" rel="stylesheet" type="text/css">
-    <title>Memos Top</title>
+    <title>MatrixCore</title>
 
 </head>
 
@@ -19,12 +19,6 @@
     <header>
         <div class="menu">
             <div class="title">Memos</div>
-
-            <div class="pages">
-                    <a href="https://github.com/eallion/memos.top" target="_blank" rel="noopener noreferrer" class="">GitHub</a>
-                    <a href="https://eallion.com/memos" target="_blank" rel="noopener noreferrer" class="">I'm Feeling Lucky</a>
-            </div>
-
         </div>
         
         <div class='theme-toggle'>🌓</div>
